book/_build/html/reports/Initial_Data_Exploration.log
Traceback (most recent call last):
  File "/Users/areidy1/Library/CloudStorage/OneDrive-UHG/repos/aoc-2020/day_1/venv/lib/python3.7/site-packages/jupyter_cache/executors/utils.py", line 56, in single_nb_execution
    record_timing=False,
  File "/Users/areidy1/Library/CloudStorage/OneDrive-UHG/repos/aoc-2020/day_1/venv/lib/python3.7/site-packages/nbclient/client.py", line 1263, in execute
    return NotebookClient(nb=nb, resources=resources, km=km, **kwargs).execute()
  File "/Users/areidy1/Library/CloudStorage/OneDrive-UHG/repos/aoc-2020/day_1/venv/lib/python3.7/site-packages/nbclient/util.py", line 85, in wrapped
    return just_run(coro(*args, **kwargs))
  File "/Users/areidy1/Library/CloudStorage/OneDrive-UHG/repos/aoc-2020/day_1/venv/lib/python3.7/site-packages/nbclient/util.py", line 60, in just_run
    return loop.run_until_complete(coro)
  File "/opt/anaconda3/lib/python3.7/asyncio/base_events.py", line 579, in run_until_complete
    return future.result()
  File "/Users/areidy1/Library/CloudStorage/OneDrive-UHG/repos/aoc-2020/day_1/venv/lib/python3.7/site-packages/nbclient/client.py", line 702, in async_execute
    cell, index, execution_count=self.code_cells_executed + 1
  File "/Users/areidy1/Library/CloudStorage/OneDrive-UHG/repos/aoc-2020/day_1/venv/lib/python3.7/site-packages/nbclient/client.py", line 1019, in async_execute_cell
    await self._check_raise_for_error(cell, cell_index, exec_reply)
  File "/Users/areidy1/Library/CloudStorage/OneDrive-UHG/repos/aoc-2020/day_1/venv/lib/python3.7/site-packages/nbclient/client.py", line 913, in _check_raise_for_error
    raise CellExecutionError.from_cell_and_msg(cell, exec_reply_content)
nbclient.exceptions.CellExecutionError: An error occurred while executing the following cell:
------------------
The column
------------------

[0;36m  File [0;32m"/var/folders/0f/wgt07yjn5gnfhmk719tfc2gm1vjz80/T/ipykernel_71028/3274289123.py"[0;36m, line [0;32m1[0m
[0;31m    The column[0m
[0m             ^[0m
[0;31mSyntaxError[0m[0;31m:[0m invalid syntax

SyntaxError: invalid syntax (3274289123.py, line 1)

